--- a/index.html
+++ b/index.html
@@ -10,22 +10,23 @@
     <!--<video autoplay muted loop preload="true" id="myVideo">
         <source src="images/beyond_light_loop.mp4" type="video/mp4">
     </video>-->
-    <label for="bungie_name" id="bungie_name_label">Enter Bungie Name: </label>
-    <input type="text" id="bungie_name" name="bungie_name">
-    <input type="submit" id="submit_bungie_name" value="Submit">
-    <label id="error_message">Something went wrong... Try again.</label><br><br>
-    <label id="searching">Searching...</label>
-    <label for="users" id="users_label">Select a User: </label>
-    <select name="users" id="users"></select>
-    <input type="submit" id="select_user" value="Submit"><br><br>
-    <label id="searching_characters">Retrieving Characters...</label>
-    <label for="characters" id="characters_label">Select a Character: </label>
-    <select name="characters" id="characters"></select>
-    <input type="submit" id="select_character" value="Submit"><br><br>
-    <label id="creating_snapshot">Creating Snapshot...</label><br><br>
-    <input type="submit" id="reset_button" value="Reset Page"><br><br>
-    <p id="character_link"></p>
-    <div id="display_snapshot"></div>
+    <h1>Destiny 2 Character Snapshot Tool</h1>
+    <div class="searchContainer">
+        <label for="bungie_name" id="bungie_name_label">Enter Bungie Name: </label>
+        <input type="text" id="bungie_name" name="bungie_name">
+        <input type="submit" id="submit_bungie_name" value="Submit"><br><br>
+        <label id="searching">Searching...</label>
+        <label for="users" id="users_label">Select a User: </label>
+        <select name="users" id="users"></select>
+        <input type="submit" id="select_user" value="Submit"><br><br>
+        <label id="searching_characters">Retrieving Characters...</label>
+        <label for="characters" id="characters_label">Select a Character: </label>
+        <select name="characters" id="characters"></select>
+        <input type="submit" id="select_character" value="Submit"><br><br>
+        <label id="creating_snapshot">Creating Snapshot...</label><br><br>
+        <label id="error_message">Something went wrong... Try again.</label><br><br>
+        <input type="submit" id="reset_button" value="Reset Page">
+    </div>
     <script src="js/index.js"></script>
 </body>
 </html>
