updated pages for usage

--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         <input type="submit" id="select_user" value="Submit"><br><br>
         <label id="searching_characters">Retrieving Characters...</label>
         <label for="characters" id="characters_label">Select a Character: </label>
-        <select name="characters" id="characters"></select>
+        <select name="characters" id="characters" >
+		<option selected disabled hidden>Default C</option>
+	</select>
         <input type="submit" id="select_character" value="Submit"><br><br>
         <label id="creating_snapshot">Creating Snapshot...</label><br><br>
         <label id="error_message">Something went wrong... Try again.</label><br><br>
