added toggleable descriptions and return to search

--- a/template.html
+++ b/template.html
@@ -7,6 +7,10 @@
     <!--<video autoplay muted loop preload="true" id="myVideo">
         <source src="/images/beyond_light_loop.mp4" type="video/mp4">
     </video>-->
+    <div class = "top-buttons">
+        <input type="submit" id="search_button" value="Return to Search">
+        <input type="submit" id="descriptions_button" value="Toggle Descriptions">
+    </div>
     <div class="grid-columns">
         <div class="grid-columns-formatting">
             <div class="item weapon">
@@ -96,5 +100,6 @@
             </div>
         </div>
     </div>
+    <script src="js/character.js"></script>
 </body>
 </html>
