--- a/template.html
+++ b/template.html
@@ -100,6 +100,6 @@
             </div>
         </div>
     </div>
-    <script src="js/character.js"></script>
+    <script src="/js/character.js"></script>
 </body>
 </html>
